RESOLVED FIXED98349
[EFL] webintents/web-intents-failure.html is failing
https://bugs.webkit.org/show_bug.cgi?id=98349
Summary [EFL] webintents/web-intents-failure.html is failing
Chris Dumez
Reported 2012-10-04 00:21:10 PDT
Due to the change in http://trac.webkit.org/changeset/130344, webintents/web-intents-failure.html started failing. This is because OpaqueJSString().string().isNull() no longer returns true. OpaqueJSString().string() now returns an empty string instead of a NULL string.
Attachments
Patch (1.64 KB, patch)
2012-10-04 00:23 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-10-04 00:23:11 PDT
WebKit Review Bot
Comment 2 2012-10-04 01:58:15 PDT
Comment on attachment 167042 [details] Patch Clearing flags on attachment: 167042 Committed r130374: <http://trac.webkit.org/changeset/130374>
WebKit Review Bot
Comment 3 2012-10-04 01:58:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.