[EFL] webintents/web-intents-failure.html is failing https://bugs.webkit.org/show_bug.cgi?id=98349

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-04
Reviewed by Gyuyoung Kim.

After r130344, OpaqueJSString().string() returns
an empty string instead of a null one. Therefore,
we need to update the check in
DumpRenderTreeSupportEfl::sendWebIntentResponse().

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::sendWebIntentResponse):

Canonical link: https://commits.webkit.org/116371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130374 268f45cc-cd09-0410-ab3c-d52691b4dbfc